[package]
name = "socketio_toy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 비동기 웹 프레임워크
axum = "0.7.1"
# rust의 비동기
futures-util = "0.3.29"
rust_socketio = { version = "0.4.4", features = ["async"] }
# 역/직렬화
serde = "1.0.193"
serde_json = "1.0"
# 비동기 I/O 작업을 위한 런타임 프레임워크
tokio = { version = "1.34.0", features = ["full"] }
# Tokio의 웹소켓 라이브러리
tokio-tungstenite = "*"
# 추적, 로깅을 하는 라이브러리
tracing-subscriber = "0.3.18"
